--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
 
   <body>
-    <h1>code in master</h1>
-    <h2>code</h2>
+    <h1>code in v1</h1>
+    <h2>some mroe code</h2>
     <script src="./script.js"></script>
   </body>
 </html>
