--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <h1>code in v2</h1>
-    <h2>some more v2 code</h2>
+    <h2>some more code</h2>
     <script src="./script.js"></script>
   </body>
 </html>
