--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <h1>code in release_1</h1>
     <h2>containing v1 + v2 some more code</h2>
+    <h3>continue</h3>
     <script src="./script.js"></script>
   </body>
 </html>
